# tauri-plugin-decoration

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
.github/scripts/: verify-release.sh
.github/workflows/: ci.yml  release.yml
examples/tauri-app/: README.md  index.html  package.json
examples/tauri-app/src/: App.tsx  styles.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: main.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: frontend_ack.toml
permissions/schemas/: schema.json
src/: commands.rs  dconf.rs  dispatcher.rs  frontend.rs  lib.rs  lifecycle.rs  linux.rs  protocol.rs  snap.rs  snap_state.rs  traffic.rs  traffic_state.rs
src/css/: controls.css
src/js/: controls.js  linux-controls.js  titlebar.js
tests/: release_verifier.rs  repository_contract.rs
tests/compatibility/tauri-2.9/: Cargo.toml  tauri.conf.json
tests/compatibility/tauri-2.9/capabilities/: default.json
tests/compatibility/tauri-2.9/frontend/: index.html
tests/compatibility/tauri-2.9/src/: lib.rs
tests/frontend/: decoration-runtime.test.mjs  dom-harness.mjs
