[package]
name = "tauri-app"
version = "0.0.0"
description = "Single-window example for tauri-plugin-decoration"
authors = ["oovz"]
license = "MIT"
repository = "https://github.com/oovz/tauri-plugin-decoration"
edition = "2021"
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "=2.5.0", default-features = false, features = [] }

[dependencies]
tauri = { version = "=2.9.0", default-features = false, features = ["wry"] }
tauri-plugin-decoration = { path = "../../../" }
